--- a/envs/dev/terraform.tfvars.example
+++ b/envs/dev/terraform.tfvars.example
@@ -1,12 +1,12 @@
 # Copy this file to terraform.tfvars and customize
 
 environment = "dev"
-aws_region  = "eu-west-1"
+aws_region  = "eu-north-1"
 domain_name = "spaaace.online"
 
 # VPC
 vpc_cidr           = "10.0.0.0/16"
-availability_zones = ["eu-west-1a", "eu-west-1b"]
+availability_zones = ["eu-north-1a", "eu-north-1b"]
 public_subnets     = ["10.0.1.0/24", "10.0.2.0/24"]
 private_subnets    = ["10.0.11.0/24", "10.0.12.0/24"]
 
