--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -4,22 +4,86 @@ on:
   push:
     branches:
       - main
+      - master
     paths:
-      - 'spaaace-tf/**'
+      - "spaaace-tf/**"
+      - ".github/workflows/terraform.yml"
   pull_request:
     paths:
-      - 'spaaace-tf/**'
+      - "spaaace-tf/**"
+      - ".github/workflows/terraform.yml"
+  workflow_dispatch:
+    inputs:
+      environment:
+        description: "Environment to run Terraform for"
+        required: true
+        default: "staging"
+        type: choice
+        options:
+          - dev
+          - staging
+          - prod
+      action:
+        description: "Terraform action to perform"
+        required: true
+        default: "plan"
+        type: choice
+        options:
+          - plan
+          - apply
 
 env:
   TF_IN_AUTOMATION: true
+  # Region mapping
+  DEV_REGION: eu-west-1
+  STAGING_REGION: eu-west-1
+  PROD_REGION: eu-north-1
 
 jobs:
+  setup:
+    name: Setup
+    runs-on: ubuntu-latest
+    outputs:
+      environment: ${{ steps.set-env.outputs.environment }}
+      region: ${{ steps.set-env.outputs.region }}
+    steps:
+      - name: Determine environment
+        id: set-env
+        run: |
+          # Determine from input or branch
+          if [ "${{ github.event_name }}" == "workflow_dispatch" ]; then
+            ENV="${{ github.event.inputs.environment }}"
+          elif [ "${{ github.ref }}" == "refs/heads/main" ] || [ "${{ github.ref }}" == "refs/heads/master" ]; then
+            ENV="prod"
+          else
+            ENV="staging"
+          fi
+
+          # Map to region
+          case "$ENV" in
+            prod)
+              REGION="${{ env.PROD_REGION }}"
+              ;;
+            staging)
+              REGION="${{ env.STAGING_REGION }}"
+              ;;
+            *)
+              REGION="${{ env.DEV_REGION }}"
+              ;;
+          esac
+
+          echo "environment=$ENV" >> $GITHUB_OUTPUT
+          echo "region=$REGION" >> $GITHUB_OUTPUT
+          echo "Environment: $ENV"
+          echo "Region: $REGION"
+
   terraform:
     name: Terraform
     runs-on: ubuntu-latest
+    needs: setup
     defaults:
       run:
-        working-directory: ./spaaace-tf/envs/dev
+        working-directory: ./spaaace-tf/envs/${{ needs.setup.outputs.environment }}
 
     steps:
       - name: Checkout
@@ -35,7 +99,7 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: eu-north-1
+          aws-region: ${{ needs.setup.outputs.region }}
 
       - name: Terraform Format
         id: fmt
@@ -52,7 +116,7 @@ jobs:
 
       - name: Terraform Plan
         id: plan
-        if: github.event_name == 'pull_request'
+        if: github.event_name == 'pull_request' || github.event.inputs.action == 'plan' || github.event_name == 'push'
         run: terraform plan -no-color
         continue-on-error: true
 
@@ -78,7 +142,8 @@ jobs:
 
             <details><summary>Show Plan</summary>
 
-            \`\`\`\n            ${process.env.PLAN}
+            \`\`\`
+            ${process.env.PLAN}
             \`\`\`
 
             </details>
@@ -96,6 +161,10 @@ jobs:
         if: steps.plan.outcome == 'failure'
         run: exit 1
 
-      - name: Terraform Apply
-        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+      - name: Terraform Apply (Auto)
+        if: (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master') && github.event_name == 'push' && needs.setup.outputs.environment != 'prod'
+        run: terraform apply -auto-approve
+
+      - name: Terraform Apply (Manual)
+        if: github.event_name == 'workflow_dispatch' && github.event.inputs.action == 'apply'
         run: terraform apply -auto-approve
